# m3u-dump

./: .gitignore  README.rst  build_installer_windows.bat  build_windows.ps1  pyproject.toml  requirements_dev.txt  setup.py  update.json
.github/workflows/: ci.yml  windows-installer.yml
installer/: m3u-dump-pro.iss
m3u_dump/: __init__.py  cli.py  gui.py  m3u_dump.py  updater.py
